<resources>
    <string name="app_name">My Application</string>
    <string name="aboutapp">Данное приложение предназначено для проектировки кровельных работ</string>
    <string name="decriptionText">Программа "Справочник для проектировки кровельных работ" - это инструмент, разработанный для помощи в проектировании и строительстве крыш. Она предоставляет широкий спектр функций, включая: </string>
    <string name="decriptionText1">Этот справочник облегчает процесс проектирования и строительства кровли, предоставляя необходимую информацию и инструменты для принятия обоснованных решений и обеспечивая качественный результат. </string>
    <string name="decriptionRoof">Расчет крыши: Пользователи могут легко ввести параметры своей крыши, такие как форма, площадь, наклон и другие, и программа предоставит расчеты для определения необходимых материалов, количества плит и других параметров. </string>
    <string name="decriptionStrapila">Расчет стропильной системы: Программа позволяет проектировать стропильную систему с учетом требуемой нагрузки, выбирая оптимальное расположение стропил, и предоставляет расчеты на прочность и стабильность </string>
    <string name="decriptionMaterial">Предоставление информации о материалах: Справочник содержит обширную базу данных о различных материалах, используемых для кровли, включая кровельные плиты, битумные материалы, металлические покрытия и многое другое. Пользователи могут получить информацию о характеристиках, стоимости и преимуществах различных материалов. </string>
    <string name="decriptionBuild">Методы сборки: Программа предоставляет советы и инструкции по методам сборки крыши, включая укладку и крепление материалов, гидроизоляцию и другие важные аспекты, чтобы обеспечить долговечность и надежность кровли. </string>
    <string name="title_activity_choose_function">ChooseFunction</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_roof_guide2">RoofGuide2</string>
    <string name="fragment2">Материалы, используемые для покрытия крыш, играют важную роль в обеспечении защиты от внешних воздействий, обеспечивая водонепроницаемость, прочность и эстетический вид. Вот несколько распространенных материалов для покрытия крыш:\n
Асфальтовая черепица:<br/>
Описание: Это один из наиболее популярных материалов для покрытия крыш, состоящий из стекловолоконной основы, насыщенной асфальтом, и гранулированной поверхности.\n
Преимущества: Доступность, широкий выбор цветов, легкая установка, отличная водонепроницаемость.\n
Недостатки: Ограниченный срок службы по сравнению с некоторыми другими материалами.\n
Металлическая крыша:\n
Описание: Металлические покрытия могут быть выполнены из стали, алюминия, цинкового сплава или меди. Они могут иметь форму листов, плит или профилированных листов.\n
Преимущества: Долговечность, стойкость к погодным условиям, легкость, возможность установки на крыши с различными наклонами.\n
Недостатки: Возможны проблемы с шумоизоляцией, некоторые металлические крыши могут подвергаться коррозии.\n
Битумные кровельные материалы:\n
Описание: Кроме асфальтовой черепицы, существуют и другие битумные материалы, такие как рулонный материал (рулонный кровельный материал или рубероид) и кровельный картон.\n
Преимущества: Хорошая водонепроницаемость, низкая стоимость, относительная простота монтажа.\n
Недостатки: Ограниченная долговечность по сравнению с некоторыми альтернативами.\n
Керамическая черепица:\n
Описание: Это традиционный и долговечный материал, изготавливаемый из обожженной глины. Он обладает характерным естественным видом.\n
Преимущества: Эстетически привлекательный, долговечный, устойчив к воздействию солнца и низкой влажности.\n
Недостатки: Требует более тщательного монтажа, более высокая стоимость.\n
Деревянная кровля:\n
Описание: Используются деревянные плиты, часто кедра или красного дерева.\n
Преимущества: Естественная красота, возможность переработки, хорошая теплоизоляция.\n
Недостатки: Требует регулярного обслуживания, подвержено воздействию влаги и насекомых.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1">Крыши представляют собой один из важных элементов зданий, обеспечивая защиту от атмосферных воздействий. Существует несколько типов крыш, каждый из которых обладает своими характеристиками и предназначением. Вот подробная информация о четырех основных типах крыш: односкатная, двухскатная, вальмовая и мансардная.\n
Односкатная крыша:\n
Описание: Односкатная крыша имеет всего один наклон, образуя наклонную плоскость от верхней точки до нижней. Этот тип крыши прост в конструкции и устанавливается сравнительно быстро.\n
Применение: Чаще всего используется для построек с небольшой площадью, таких как склады, гаражи или небольшие хозяйственные постройки.\n
Двухскатная крыша:\n
Описание: Двухскатная крыша представляет собой самый распространенный тип, состоящий из двух скатов, сходящихся в вершине. Угол наклона может варьироваться в зависимости от дизайна и климатических условий.\n
Применение: Этот тип крыши часто используется в жилых и коммерческих зданиях, так как он обеспечивает эффективное сливание воды и снега.\n
Вальмовая крыша:\n
Описание: Вальмовая крыша имеет четыре ската, сходящихся в вершине, образуя вид треугольника. Этот тип крыши характеризуется тем, что все стороны имеют наклон.\n
Применение: Часто используется для домов с квадратной или прямоугольной формой, а также для коттеджей. Вальмовая крыша обеспечивает хорошую стойкость к ветру.\n
Мансардная крыша:\n
Описание: Мансардная крыша сочетает в себе две части – нижнюю, более крутую, и верхнюю, менее крутую. Верхняя часть создает дополнительное пространство под крышей, что позволяет использовать мансарду как дополнительное жилое помещение.\n
Применение: Этот тип крыши часто используется для увеличения жилой площади в домах. Мансарды могут быть использованы как спальни, кабинеты или другие функциональные помещения.</string>

</resources>